--- a/Excursion/resources/css/style.css
+++ b/Excursion/resources/css/style.css
@@ -1,20 +1,29 @@
 body {
-  background-color: rgb(0, 0, 27);
+  background-color: black;
   text-align: center;
   font-family: Verdana;
 }
 
 h1 {
   color: white;
-  font-weight: light;
+  font-size: 42px;
+  font-weight: 300;
+}
+
+.header {
+  color: white;
+  font-size: 50px;
+  font-weight: normal;
 }
 
 p {
   color: grey;
+  font-size: 21px;
 }
 
 a {
-  color: turquoise;
+  color: aquamarine;
+  font-size: 16px;
 }
 
 footer {
