--- a/Excursion/resources/css/style.css
+++ b/Excursion/resources/css/style.css
@@ -1,10 +1,10 @@
 body {
   background-color: black;
   text-align: center;
-  font-family: Verdana;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-h1 {
+h2 {
   color: white;
   font-size: 42px;
   font-weight: 300;
@@ -21,7 +21,7 @@ p {
   font-size: 21px;
 }
 
-a {
+.link {
   color: aquamarine;
   font-size: 16px;
 }
