--- a/My Website Style Guide/resources/css/style.css
+++ b/My Website Style Guide/resources/css/style.css
@@ -1,20 +1,67 @@
+.font {
+  font-family: "Open Sans Condensed", sans-serif;
+  font-family: "Quicksand", sans-serif;
+  font-family: "Titillium Web", sans-serif;
+}
+
 body {
   font-family: "Open Sans Condensed", sans-serif;
   background-color: rgb(175, 207, 255);
+  margin: 0 10%;
 }
 
 #header {
   text-align: center;
 }
 
-.div {
-  background-color: rgb(255, 255, 255);
-  padding: 10px;
-  margin: 10px auto;
+h2 {
+  text-align: center;
 }
 
-.font {
-  font-family: "Open Sans Condensed", sans-serif;
-  font-family: "Quicksand", sans-serif;
-  font-family: "Titillium Web", sans-serif;
+.div {
+  padding: 10px;
+  margin: 10px auto;
+  background-color: rgb(250, 208, 221);
+}
+
+.colorBox {
+  background-color: rgb(208, 250, 208);
+  margin: 10px auto;
+  min-height: 100px;
+  text-align: center;
+  padding: 10px;
+}
+
+.colorBlue {
+  background-color: rgb(28, 81, 226);
+  padding: 5px;
+  color: white;
+}
+
+.colorRed {
+  background-color: rgb(248, 50, 50);
+  padding: 5px;
+  color: white;
+}
+
+.colorBlack {
+  background-color: rgb(0, 0, 0);
+  padding: 5px;
+  color: white;
+}
+
+.colorYellow {
+  background-color: rgb(255, 255, 0);
+  padding: 5px;
+  color: white;
+}
+
+#pColorBlack {
+  color: black;
+}
+
+.colorWhite {
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  color: white;
 }
