--- a/Tea Cozy/resources/css/style.css
+++ b/Tea Cozy/resources/css/style.css
@@ -1,9 +1,48 @@
 html {
   font-size: 22px;
   font-family: Helvetica, Arial, sans-serif;
-  color: seashell;
+}
+
+body {
   background-color: black;
+  color: seashell;
   opacity: 0.9;
   text-align: center;
   vertical-align: middle;
 }
+
+h2 {
+}
+
+h4 {
+}
+
+h5 {
+}
+
+a {
+  text-decoration: underline;
+}
+
+p {
+}
+
+.header {
+  border-bottom: 1px seashell solid;
+  position: fixed;
+  height: 69px;
+  padding: 10px 0;
+  top: 0;
+  width: 100%;
+  display: inline-flex; 
+}
+
+.header li {
+  display: inline-block;
+  
+}
+.img {
+   height="50px" 
+}
+
+
