--- a/Tea Cozy/resources/css/style.css
+++ b/Tea Cozy/resources/css/style.css
@@ -8,7 +8,7 @@ body {
   color: seashell;
   opacity: 0.9;
   text-align: center;
-  vertical-align: middle;
+  margin: 0;
 }
 
 h2 {
@@ -20,10 +20,6 @@ h4 {
 h5 {
 }
 
-a {
-  text-decoration: underline;
-}
-
 p {
 }
 
@@ -31,18 +27,28 @@ p {
   border-bottom: 1px seashell solid;
   position: fixed;
   height: 69px;
-  padding: 10px 0;
   top: 0;
   width: 100%;
-  display: inline-flex; 
 }
 
-.header li {
+.logo {
+  height: 50px;
+  float: left;
+  padding-left: 10px;
+  margin: 9px auto;
+}
+
+.nav {
+  text-align: right;
+  margin: 0 auto;
+  padding-right: 10px;
+}
+
+.nav a {
+  text-decoration: underline;
+}
+
+.nav li {
   display: inline-block;
-  
+  padding-left: 20px;
 }
-.img {
-   height="50px" 
-}
-
-
