--- a/Tea Cozy/resources/css/style.css
+++ b/Tea Cozy/resources/css/style.css
@@ -72,3 +72,10 @@ p {
   justify-content: center;
   align-items: center;
 }
+
+.mission-quote {
+  background-color: black;
+  width: 100%;
+  height: auto;
+  margin: auto;
+}
