--- a/Tea Cozy/resources/css/style.css
+++ b/Tea Cozy/resources/css/style.css
@@ -60,8 +60,8 @@ p {
 /* Mission Section */
 
 .mission {
-  width: 1200px;
-  height: 700px;
+  max-width: 1200px;
+  min-height: 700px;
   text-align: center;
   margin: 69px auto;
   background-image: url("../../assets/images/mission.webp");
@@ -76,14 +76,9 @@ p {
 .mission-quote {
   background-color: black;
   width: 100%;
-  height: 100px;
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
-}
-
-#mission-header2 {
-  text-align: center;
 }
 
 /* Tea Section */
@@ -99,4 +94,40 @@ p {
   width: 300px;
   height: 200px;
   padding: 10px 10px;
+}
+
+/* Locations Section */
+
+.location {
+  max-width: 1200px;
+  min-height: 500px;
+  text-align: center;
+  margin: 0px auto;
+  background-image: url("../../assets/images/locations-background.webp");
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+
+#location-h2 {
+  width: 100%;
+  padding-top: 70px;
+}
+
+.address {
+  max-width: 1200px;
+  margin: 0px auto;
+  justify-content: center;
+  align-items: center;
+  display: inline-flex;
+}
+
+.address-box {
+  min-width: 300px;
+  opacity: 0.8;
+  background-color: black;
+  margin: 15px 20px;
 }
