added z-index to header

--- a/Tea Cozy/resources/css/style.css
+++ b/Tea Cozy/resources/css/style.css
@@ -21,6 +21,7 @@ body {
   width: 100%;
   background-color: black;
   margin: 0 auto;
+  z-index: 100;
 }
 
 .logo {
@@ -115,7 +116,7 @@ body {
 .address-box {
   width: 300px;
   height: auto;
-  opacity: 1;
+  opacity: 0.8;
   background-color: black;
   padding: 5px 5px;
   margin: 15px 20px;
